--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,9 @@ dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.android.support:appcompat-v7:22.2.0'
 
+    compile 'org.roboguice:roboguice:3.+'
+    provided 'org.roboguice:roboblender:3.+'
+
     testCompile 'org.mockito:mockito-core:1.+'
     testCompile 'junit:junit:4.12'
     testCompile "org.robolectric:robolectric:3.0-rc2"
