--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,9 +4,9 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/red_hat_white_skull"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/PrioritiesTheme" >
         <activity
             android:name=".activity.MainActivity"
             android:label="@string/app_name" >
