--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,11 +9,16 @@
         android:theme="@style/PrioritiesTheme" >
         <activity
             android:name=".activity.SetPrioritiesActivity"
-            android:label="@string/app_name" >
+            android:label="Set Priorities" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".activity.ReadPrioritiesActivity"
-            android:label="@string/title_activity_read_priorities" >
+            android:label="@string/app_name_long" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
